# grstaps

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile.in  README.md  build.sh  domain.pddl  run_experiments.sh  run_robotarium.sh  test.sh
fcpop_mp/: CMakeLists.txt  main.cpp
icra_2021_experiments/: CMakeLists.txt  alpha_bar_chart.py  chart_alpha_scatter.py  experiments.cpp  experiments.hpp  icra_problem.cpp  icra_problem.hpp  icra_problem_base.cpp  icra_problem_base.hpp  icra_problem_v1.cpp  icra_problem_v1.hpp  icra_problem_v2.cpp  icra_problem_v2.hpp  main.cpp  maps  old_icra_problem_v1.cpp  old_icra_problem_v1.hpp  opt.py  run.py
icra_2021_experiments/maps/: map2.json  map3.json
icra_2021_experiments/old outputs/outputs/: output_100_0.0_1.json  output_106_0.0_1.json  output_116_0.0_1.json  output_11_0.0_1.json  output_120_0.0_1.json  output_130_0.0_1.json  output_131_0.0_1.json  output_138_0.0_1.json  output_141_0.0_1.json  output_143_0.0_1.json  output_145_0.0_1.json  output_150_0.0_1.json  output_157_0.0_1.json  output_158_0.0_1.json  output_160_0.0_1.json  output_163_0.0_1.json  output_166_0.0_1.json  output_168_0.0_1.json  output_16_0.0_1.json  output_170_0.0_1.json  output_171_0.0_1.json  output_172_0.0_1.json  output_181_0.0_1.json  output_185_0.0_1.json  output_188_0.0_1.json  output_190_0.0_1.json  output_193_0.0_1.json  output_195_0.0_1.json  output_196_0.0_1.json  output_198_0.0_1.json  output_53_0.0_1.json  output_80_0.0_1.json  output_86_0.0_1.json  output_95_0.0_1.json
icra_2021_experiments/old outputs/problems/: problem_101.json  problem_107.json  problem_111.json  problem_112.json  problem_116.json  problem_117.json  problem_12.json  problem_121.json  problem_127.json  problem_136.json  problem_143.json  problem_15.json  problem_150.json  problem_153.json  problem_157.json  problem_16.json  problem_161.json  problem_163.json  problem_165.json  problem_177.json  problem_18.json  problem_187.json  problem_192.json  problem_195.json  problem_198.json  problem_22.json  problem_38.json  problem_41.json  problem_42.json  problem_52.json  problem_53.json  problem_68.json  problem_77.json  problem_86.json  problem_97.json
icra_2021_experiments/old_outputs/outputs/: output_101_0.0_1.json  output_108_0.0_1.json  output_10_0.0_1.json  output_113_0.0_1.json  output_115_0.0_1.json  output_118_0.0_1.json  output_121_0.0_1.json  output_128_0.0_1.json  output_133_0.0_1.json  output_135_0.0_1.json  output_13_0.0_1.json  output_151_0.0_1.json  output_155_0.0_1.json  output_15_0.0_1.json  output_173_0.0_1.json  output_178_0.0_1.json  output_180_0.0_1.json  output_1_0.0_1.json  output_200_0.0_1.json  output_20_0.0_1.json  output_23_0.0_1.json  output_26_0.0_1.json  output_35_0.0_1.json  output_38_0.0_1.json  output_3_0.0_1.json  output_41_0.0_1.json  output_46_0.0_1.json  output_48_0.0_1.json  output_50_0.0_1.json  output_51_0.0_1.json  output_55_0.0_1.json  output_58_0.0_1.json  output_60_0.0_1.json  output_61_0.0_1.json  output_63_0.0_1.json  output_66_0.0_1.json  output_68_0.0_1.json  output_70_0.0_1.json  output_73_0.0_1.json  output_76_0.0_1.json  (+6 more)
icra_2021_experiments/old_outputs/problems/: problem_1.json  problem_10.json  problem_100.json  problem_102.json  problem_103.json  problem_105.json  problem_106.json  problem_110.json  problem_115.json  problem_120.json  problem_122.json  problem_123.json  problem_128.json  problem_138.json  problem_142.json  problem_151.json  problem_160.json  problem_170.json  problem_173.json  problem_180.json  problem_181.json  problem_182.json  (+41 more)
icra_2021_experiments/outputs/: output_100_0.0_0.json  output_100_0.25_0.json  output_101_0.0_0.json  output_101_0.5_0.json  output_101_0.75_0.json  output_103_0.0_0.json  output_103_0.0_1.json  output_104_0.0_1.json  output_104_0.25_0.json  output_105_0.0_1.json  output_105_0.25_0.json  output_106_0.0_0.json  output_106_0.25_0.json  output_106_0.5_0.json  output_106_0.75_0.json  output_108_0.0_1.json  output_109_0.0_0.json  output_109_0.25_0.json  output_109_0.5_0.json  output_110_0.0_1.json  output_110_0.25_0.json  output_110_0.75_0.json  output_111_0.0_0.json  output_111_0.0_1.json  output_111_0.5_0.json  output_111_0.75_0.json  output_113_0.0_1.json  output_115_0.0_0.json  output_115_0.0_1.json  output_115_0.25_0.json  output_116_0.0_0.json  output_116_0.25_0.json  output_118_0.0_1.json  output_118_0.25_0.json  output_119_0.0_0.json  output_119_0.0_1.json  output_119_0.25_0.json  output_119_0.75_0.json  output_11_0.5_0.json  output_11_0.75_0.json  (+232 more)
icra_2021_experiments/problems/: problem_100.json  problem_105.json  problem_108.json  problem_109.json  problem_11.json  problem_113.json  problem_116.json  problem_118.json  problem_119.json  problem_120.json  problem_124.json  problem_125.json  problem_126.json  problem_129.json  problem_13.json  problem_130.json  problem_131.json  problem_132.json  problem_133.json  problem_135.json  problem_136.json  problem_137.json  problem_14.json  problem_140.json  problem_141.json  problem_143.json  problem_144.json  problem_145.json  problem_146.json  problem_147.json  problem_148.json  problem_149.json  problem_15.json  problem_150.json  problem_152.json  problem_155.json  problem_156.json  problem_158.json  problem_162.json  problem_166.json  (+63 more)
icra_2021_experiments/scripts/: alpha_bar_chart.py  anova.py  box_plots.py  charts_alpha_bar.py  charts_seq.py  converge_runs.py  num_solved.py  scrape.py  seq_bar_chart.py  seq_hbar_chart.py  sequential_box_plot.py
ijrr_2021_experiments/: CMakeLists.txt  domain_extra.pddl  domain_simple.pddl  main.cpp  parse_results.py  problem_generator.py  problem_generator2.py  problem_generator_fcpop.py  problem_generator_ng.py  problem_generator_nr.py  run.py  run.sh  show_map.py  show_map2.py  updated_map.json
ijrr_2021_experiments/maps/: test.json
iros_2021_experiments/: CMakeLists.txt  iros_problem.cpp  iros_problem.hpp  iros_solver.cpp  iros_solver.hpp  main.cpp
iros_2021_experiments/maps/: test.json
lib/: CMakeLists.txt
lib/clipper/: CMakeLists.txt
(+1893 files in other folders)
